# LaunchChit

./: .env.example  .gitignore  DEVELOPER_GUIDE.md  README.md  alembic.ini  conftest.py  main.py  pyproject.toml
alembic/: README.md
alembic_migrations/versions/: 34d2b1704f2b_init.py  8c1a2b3c4d5e_add_products_votes.py  b7c228b8ae3b_refactor_auth_add_password_is_active_.py
app/: __init__.py  main.py
app/api/: __init__.py  dependencies.py
app/api/v1/: __init__.py  apps.py  auth.py  comments.py  products.py  router.py  users.py  votes.py
app/config/: __init__.py  database.py  settings.py
app/core/: __init__.py  exceptions.py  password.py  security.py
app/models/: __init__.py  otp.py  product.py  user.py  vote.py
app/repositories/: __init__.py
app/schemas/: __init__.py  auth.py  product.py
app/services/: __init__.py  activation_token.py  email_otp.py  integify_token.py  otp_sender.py  product_service.py  sms_otp.py
app/utils/: slug.py
docs/: FILE_STRUCTURE.md  MVP_IMPLEMENTATION_PLAN.md  SPEC_DEVIATIONS.md  TEST_ENVIRONMENT_SETUP.md
tests/: __init__.py  conftest.py  test_auth_me.py  test_auth_request_otp.py  test_auth_signup_login.py  test_auth_verify_otp.py  test_email_otp.py  test_integify_token.py  test_models.py  test_products.py  test_products_complete.py  test_settings.py  test_sms_otp.py
